# cin-distributed

./: .gitignore  feedback-loop.py  pyproject.toml  requirements-dev.txt  requirements.txt  router.py  routing-logger.py  shell_ghost.py  sub-agent-interface.py
.github/workflows/: ci.yml
tests/: conftest.py  test_complexity_analyzer.py  test_routing_logger.py  test_shell_ghost.py  test_sub_agent_interface.py
